refactor: removido uso do Collectors e implementado direto o método .toList no ActorDTO